services/blue-green-app/preview-ingress/preview-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blue-green-app-preview
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: blue-green-app-preview.foo.bar
    http:
      paths:
      - path: /
        backend:
          serviceName: blue-green-app-preview
          servicePort: 80
